# EibAIS-MLOps-tutorial

./: .env.template  Makefile  README.md  dot-env-template  dvc.yaml  pyproject.toml
.dvc/: config
gx/: great_expectations.yml
gx/checkpoints/: imdb_reviews_checkpoint.json
gx/data_docs/: index.html
gx/data_docs/expectations/: data_quality_validation.html  imdb_reviews_data_validation.html
gx/data_docs/validations/imdb_reviews_data_validation/__none__/20250509T085546.233680Z/: imdb_reviews-imdb_reviews_parquet.html
gx/data_docs/validations/imdb_reviews_data_validation/__none__/20250509T085914.661677Z/: imdb_reviews-imdb_reviews_parquet.html
gx/data_docs/validations/imdb_reviews_data_validation/__none__/20250509T090423.462466Z/: imdb_reviews-imdb_reviews_parquet.html
gx/data_docs/validations/imdb_reviews_data_validation/__none__/20250509T092436.913634Z/: imdb_reviews-imdb_reviews_parquet.html
gx/data_docs/validations/imdb_reviews_data_validation/__none__/20250509T104708.784098Z/: imdb_reviews-imdb_reviews_parquet.html
gx/expectations/: .ge_store_backend_id  data_quality_validation.json  imdb_reviews_data_validation.json
gx/validation_definitions/: clean_data_validator.json  imdb_reviews_data_validator.json  raw_data_validator.json
notebooks/: tmp.ipynb
src/: config.py
src/api/: api.py  schemas.py
src/data/: gx_context_configuration.py  preprocess.py  split_data.py  validate_data.py
src/modeling/: evaluate.py  train.py
tests/: test_model.py
