[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = ""
authors = [
  { name = "Santiago del Rey" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "datasets>=3.5.1",
    "dvc>=3.59.2",
    "evaluate>=0.4.3",
    "fastapi>=0.115.12",
    "huggingface-hub[hf-xet]>=0.30.2",
    "ipywidgets>=8.1.7",
    "pip",
    "polars>=1.29.0",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.51.3",
    "typer>=0.15.3",
    "uvicorn[standard]>=0.34.2",
]
requires-python = ">3.10"


[tool.ruff]
line-length = 120
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    #Pylint
    "PL",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "pre-commit>=4.2.0",
]
